<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent">

    <PreferenceCategory
        android:title="@string/title_first_section">

        <app.com.vaipo.LongSummaryCheckboxPreference
            android:key="checkbox_preference"
            android:checked="false"
            android:title="@string/title_checkbox_preference"
            android:defaultValue="@string/default_checkbox_preference"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="Link Facebook">

        <EditTextPreference
            android:key="edittext_facebook"
            android:title="Facebook"
            android:icon="@drawable/facebook"
            android:summary="Support to be added!"
            android:enabled="false"
            />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/title_second_section">

        <ListPreference
            android:key="list_preference"
            android:title="@string/title_list_preference"
            android:summary=""
            android:dialogTitle="@string/dialog_title_list_preference"
            android:entries="@array/entries_list_preference"
            android:entryValues="@array/entryvalues_list_preference" />


        <!-- <Preference
            android:title="@string/title_intent_preference">
            <intent android:action="android.intent.action.VIEW"
                    android:data="http://codepath.com/" />
        </Preference>-->

    </PreferenceCategory>

</PreferenceScreen>
